Add error control to POST/ratings endpoint
